# advent_of_code

./: 14_vis.txt  4.py  day3.py  mkday.sh  pyproject.toml  run.sh  today.sh
2020/: 5.py  day1.py  day2.py
2021/: 1.py  3.py  6.py
2021/10/: code.py
2021/11/: code.py
2021/12/: code.py
2021/7/: code.py
2021/8/: code.py
2021/9/: code.py
2022/: 2.py  4.py  5.py  four  util.py
2022/9/: blobs.csv
2022/src/: 1.py  12.py  14.py  3.py  6.py  7.py  8.py  9.py  three.py  two.py  util.py
2023/01/: solve.py
2023/02/: solve.py
