[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["tClelford <tfjclelford@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
